@@ -105,6 +105,7 @@ __ZN3KJS12DateInstance4infoE
 __ZN3KJS12PropertySlot15undefinedGetterEPNS_9ExecStateEPNS_8JSObjectERKNS_10IdentifierERKS0_
 __ZN3KJS12jsNumberCellEd
 __ZN3KJS13ArrayInstance4infoE
+__ZN3KJS13CodeGenerator21setDumpsGeneratedCodeEb
 __ZN3KJS13StatementNode6setLocEii
 __ZN3KJS13jsOwnedStringERKNS_7UStringE
 __ZN3KJS14JSGlobalObject10globalExecEv
